Scroll Animation Done

--- a/6-Scroll Animation/index.html
+++ b/6-Scroll Animation/index.html
@@ -5,15 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hidden Seach Widget</title>
+    <title>Scroll Animation</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5a4d51e004.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-    <div class="loading-text">0%</div>
-    <div class="bg"></div>
+    <div class="container">
+        <h1>Scroll the Page to See Animation</h1>
+        <div class="content">Content</div>
+        <div class="content">Content</div>
+        <div class="content">Content</div>
+        <div class="content">Content</div>
+        <div class="content">Content</div>
+        <div class="content">Content</div>
+        <div class="content">Content</div>
+        <div class="content">Content</div>
+        <div class="content">Content</div>
+    </div>
 
     <script src="main.js"></script>
 </body>
