Movie App Project Done

--- a/17- Movie UI/index.html
+++ b/17- Movie UI/index.html
@@ -5,101 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie UI</title>
+    <title>Movie App</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5a4d51e004.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <nav>
-        <input class="search" placeholder="Search..." type="text">
+        <div>Movie Recommender</div>
+        <form action="submit">
+            <input class="search" placeholder="Search..." type="text">
+        </form>
     </nav>
     <div class="container">
-        <div class="movie-box">
-            <div class="movie-photo"></div>
-            <div class="text">
-                <div class="movie-name">ekmek kavgası</div>
-                <div class="movie-point">7.2</div>
-            </div>
-            <div class="movie-info">
-                <h3>baslik</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ipsam ea ad nemo vitae sapiente,
-                    minus fugiat quos aspernatur est, doloribus, labore asperiores quisquam id.</p>
-            </div>
-        </div>
-        <div class="movie-box">
-            <div class="movie-photo"></div>
-            <div class="text">
-                <div class="movie-name">ekmek kavgası</div>
-                <div class="movie-point">7.2</div>
-            </div>
-            <div class="movie-info">
-                <h3>baslik</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ipsam ea ad nemo vitae sapiente,
-                    minus fugiat quos aspernatur est, doloribus, labore asperiores quisquam id.</p>
-            </div>
-        </div>
-        <div class="movie-box">
-            <div class="movie-photo"></div>
-            <div class="text">
-                <div class="movie-name">ekmek kavgası</div>
-                <div class="movie-point">7.2</div>
-            </div>
-            <div class="movie-info">
-                <h3>baslik</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ipsam ea ad nemo vitae sapiente,
-                    minus fugiat quos aspernatur est, doloribus, labore asperiores quisquam id.</p>
-            </div>
-        </div>
-        <div class="movie-box">
-            <div class="movie-photo"></div>
-            <div class="text">
-                <div class="movie-name">ekmek kavgası</div>
-                <div class="movie-point">7.2</div>
-            </div>
-            <div class="movie-info">
-                <h3>baslik</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ipsam ea ad nemo vitae sapiente,
-                    minus fugiat quos aspernatur est, doloribus, labore asperiores quisquam id.</p>
-            </div>
-        </div>
-        <div class="movie-box">
-            <div class="movie-photo"></div>
-            <div class="text">
-                <div class="movie-name">ekmek kavgası</div>
-                <div class="movie-point">7.2</div>
-            </div>
-            <div class="movie-info">
-                <h3>baslik</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ipsam ea ad nemo vitae sapiente,
-                    minus fugiat quos aspernatur est, doloribus, labore asperiores quisquam id.</p>
-            </div>
-        </div>
-        <div class="movie-box">
-            <div class="movie-photo"></div>
-            <div class="text">
-                <div class="movie-name">ekmek kavgası</div>
-                <div class="movie-point">7.2</div>
-            </div>
-            <div class="movie-info">
-                <h3>baslik</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ipsam ea ad nemo vitae sapiente,
-                    minus fugiat quos aspernatur est, doloribus, labore asperiores quisquam id.</p>
-            </div>
-        </div>
-        <div class="movie-box">
-            <div class="movie-photo"></div>
-            <div class="text">
-                <div class="movie-name">ekmek kavgası</div>
-                <div class="movie-point">7.2</div>
-            </div>
-            <div class="movie-info">
-                <h3>baslik</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ipsam ea ad nemo vitae sapiente,
-                    minus fugiat quos aspernatur est, doloribus, labore asperiores quisquam id.</p>
-            </div>
-        </div>
-
+        
     </div>
 
 
