Image Password Strength

--- a/33-Password/index.html
+++ b/33-Password/index.html
@@ -26,10 +26,13 @@
             <input type="password" class="border block w-full p-2 mt-2 rounded" id="password"
                 placeholder="Enter Password" />
         </div>
+        <form method="get" id="form">
+            <button id="button" class="bg-black text-white py-2 mt-4 inline-block w-full rounded" type="submit">
+                Submit
+            </button>
+        </form>
 
-        <button id="button" class="bg-black text-white py-2 mt-4 inline-block w-full rounded" type="submit">
-            Submit
-        </button>
+        <div class="my-1 form-message"></div>
     </div>
     <script src="main.js"></script>
 </body>
