--- a/38-Verify Account/index.html
+++ b/38-Verify Account/index.html
@@ -13,39 +13,21 @@
 
 <body>
     <div class="container">
-        <h2>Password Generator</h2>
-        <div class="result-container">
-            <span id="result"></span>
-            <button class="btn" id="clipboard">
-                <i class="far fa-clipboard"></i>
-            </button>
-        </div>
-        <div class="settings">
-            <div class="setting">
-                <label>Password Length</label>
-                <input type="number" id="length" min="4" max="16" value="9">
-            </div>
-            <div class="setting">
-                <label>Include uppercase letters</label>
-                <input type="checkbox" id="uppercase" checked>
-            </div>
-            <div class="setting">
-                <label>Include lowercase letters</label>
-                <input type="checkbox" id="lowercase" checked>
-            </div>
-            <div class="setting">
-                <label>Include numbers</label>
-                <input type="checkbox" id="numbers" checked>
-            </div>
-            <div class="setting">
-                <label>Include symbols</label>
-                <input type="checkbox" id="symbols" checked>
-            </div>
-        </div>
+        <h2>Verify Account</h2>
+        <p>We emailed you the six digit code to cool_guy@email.com <br /> Enter the code below to confirm your email
+            address.</p>
 
-        <button class="btn btn-large" id="generate">
-            Generate Password
-        </button>
+        <div class="digits">
+            <input type="number" class="digit" placeholder="0" min="0" max="9" required>
+            <input type="number" class="digit" placeholder="0" min="0" max="9" required>
+            <input type="number" class="digit" placeholder="0" min="0" max="9" required>
+            <input type="number" class="digit" placeholder="0" min="0" max="9" required>
+            <input type="number" class="digit" placeholder="0" min="0" max="9" required>
+            <input type="number" class="digit" placeholder="0" min="0" max="9" required>
+        </div>
+        <small class="info">
+            This is design only. We didn't actually send you an email as we don't have your email, right?
+        </small>
     </div>
     <script src="main.js"></script>
 </body>
