--- a/17- Movie UI/index.html
+++ b/17- Movie UI/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav>
-        <div>Movie Recommender</div>
+        <h1>Movie Recommender</h1>
         <form action="submit">
             <input class="search" placeholder="Search..." type="text">
         </form>
